# bech32m

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
bech32m/: __about__.py  __init__.py  codecs.py
tests/: __init__.py  test_codecs.py
